    - Fixed that quests requiring to kill entities using a specific damage type was not using localization for the damage type.
    - Fixed that quest reward items given to dead players (waiting to respawn) were being dropped off at Nauvis spawn.  This pertains to the "Electrocution" quest.
    - Fixed some migration issues from 1.3.1 saves and older.
  Scripting:
    - Added remote interfaces.
  Optimizations:
    - Optimized overall trading performance. The improvement is proportional to the number of players online at once.
    - Slightly optimized coin calculations.
    - Optimized random trade generation.
---------------------------------------------------------------------------------------------------
Version: 1.5.10
Date: 25/1/26
  Bugfixes:
    - Fixed the game crashing upon placing a mining drill.
    - Fixed the game crashing upon breaking a strongbox on a save created with version 1.5.9.
    - Fixed the game crashing upon finding trades with expensive items in them.
---------------------------------------------------------------------------------------------------
Version: 1.5.9
Date: 25/1/26
  Bugfixes:
    - Fixed that most features consuming coins would auto-sort the rest of your coins into your piggy bank before it was unlocked.
---------------------------------------------------------------------------------------------------
Version: 1.5.8
Date: 25/1/26
  Features:
    - Added the Piggy Bank, unlocked from a quest on Gleba.
    - Added 1 new quest: "Industrial Garden".
  Graphics:
    - Added images for the quests "Farm Fresh Produce" and "Lazy Bastard".
  Bugfixes:
    - Fixed that save migration up to version 1.5.6 was removing trade productivity bonuses from quests.
    - Fixed that disconnecting from a server (losing connection, being kicked, force-quitting, etc.) was teleporting you to your remote view location upon rejoining.
---------------------------------------------------------------------------------------------------
Version: 1.5.7